# flutter-webrtc

./: pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: AudioBufferUtilJNI.cpp  NativeBuffer.h  VideoDecoderBypassJNI.cpp  native_buffer_api.cpp  native_buffer_api.h
android/src/main/java/com/cloudwebrtc/webrtc/: FlutterWebRTCPlugin.java  MethodCallHandlerImpl.java  PeerConnectionObserver.java
android/src/main/java/org/webrtc/audio/: AudioBufferUtil.java
android/src/main/java/org/webrtc/video/: CustomVideoDecoderFactory.java  VideoDecoderBypass.java
common/darwin/Classes/: AudioManager.h  FlutterRTCMediaStream.h  FlutterRTCMediaStream.m  FlutterRTCPeerConnection.m  FlutterWebRTCPlugin.h  FlutterWebRTCPlugin.m
ios/: flutter_webrtc.podspec
ios/Classes/: CustomVideoDecoderFactory.h  CustomVideoDecoderFactory.mm  NativeBuffer.cpp  NativeBufferBridge.h  NativeBufferBridge.mm  RTCVideoDecoderBypass.h  RTCVideoDecoderBypass.mm
lib/bindings/: media_frame.dart  native_bindings.dart
